add category and product services with enhanced exception handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=OrderFlow
 server.port=${PORT:5000}
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
+# Database
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/order-flow
 spring.datasource.username=postgres
@@ -11,5 +12,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 # Resources
-#spring.web.resources.static-locations=file:src/main/resources/static/
-#spring.web.resources.cache.period=0
+spring.thymeleaf.cache=false
+spring.web.resources.static-locations=file:src/main/resources/static/
+spring.web.resources.cache.period=0
+# Logging
+logging.level.org.springframework=INFO
+logging.level.com.cafe.order.management=DEBUG
