refactor services to use @RequiredArgsConstructor and update Swagger configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Resources
 spring.thymeleaf.cache=false
 spring.web.resources.static-locations=file:src/main/resources/static/
@@ -18,3 +19,5 @@ spring.web.resources.cache.period=0
 # Logging
 logging.level.org.springframework=INFO
 logging.level.com.cafe.order.management=DEBUG
+# Swagger
+springdoc.override-with-generic-response=false
