--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
   </scm>
   <properties>
     <java.version>21</java.version>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
   </properties>
   <dependencies>
     <!-- Spring Boot Starters -->
@@ -49,11 +51,11 @@
     </dependency>
 
     <!-- Swagger -->
-    <!--    <dependency>-->
-    <!--      <groupId>org.springdoc</groupId>-->
-    <!--      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
-    <!--      <version>2.7.0</version>-->
-    <!--    </dependency>-->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.5.0</version>
+    </dependency>
 
     <!-- database -->
     <dependency>
@@ -87,11 +89,15 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
         <configuration>
+          <source>21</source>
+          <target>21</target>
           <annotationProcessorPaths>
             <path>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
+              <version>1.18.32</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
