add new controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.web.resources.cache.period=0
 # Logging
 logging.level.org.springframework=INFO
 logging.level.com.cafe.order.management=DEBUG
+#API NovaPoshta
+nova.poshta.api.key=9d3d3cf674e4b4c41af4454e04a9deb9
+nova.poshta.api.url=https://api.novaposhta.ua/v2.0/json/
