--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
   </scm>
   <properties>
     <java.version>21</java.version>
+    <maven.compiler.source>23</maven.compiler.source>
+    <maven.compiler.target>23</maven.compiler.target>
   </properties>
   <dependencies>
     <!-- Spring Boot Starters -->
@@ -60,6 +62,11 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
     </dependency>
 
     <!-- Lombok -->
