--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-crypto</artifactId>
+      <version>6.4.2</version>
+    </dependency>
 
     <!-- Swagger -->
     <dependency>
@@ -120,7 +125,6 @@
       <optional>true</optional>
     </dependency>
   </dependencies>
-
 
 
   <build>
