--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,10 @@ nova.poshta.api.key=9d3d3cf674e4b4c41af4454e04a9deb9
 nova.poshta.api.url=https://api.novaposhta.ua/v2.0/json/
 # Swagger
 springdoc.override-with-generic-response=false
+#
+spring.mail.username=orderflow.shop.09@gmail.com
+spring.mail.password=dtuqurfegjhcxfqq
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
