--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -25,7 +25,7 @@ spring.web.resources.static-locations=file:src/main/resources/static/
 springdoc.override-with-generic-response=false
 # Mail
 spring.mail.username=orderflow.shop.09@gmail.com
-spring.mail.password=dtuqurfegjhcxfqq
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
