add Liquibase dependency and create initial database schema with sample data

--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -12,7 +12,7 @@ spring.datasource.tomcat.remove-abandoned=true
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.flyway.enabled=true
+#spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=false
 # Thymeleaf
 spring.thymeleaf.cache=false
