--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,10 @@ spring.datasource.password=password
 # JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.flyway.enabled=false
+spring.flyway.baseline-on-migrate=false
 # Resources
 spring.thymeleaf.cache=false
 spring.web.resources.static-locations=file:src/main/resources/static/
