--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -10,9 +10,9 @@ spring.datasource.tomcat.min-idle=2
 spring.datasource.tomcat.initial-size=5
 spring.datasource.tomcat.remove-abandoned=true
 # JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=false
 # Thymeleaf
 spring.thymeleaf.cache=false
