--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=OrderFlow
-server.port=${PORT:5000}
-spring.devtools.livereload.enabled=true
-spring.devtools.restart.enabled=true
+server.port=5000
+spring.devtools.livereload.enabled=false
+spring.devtools.restart.enabled=false
 # Database
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/order-flow
