refactor authentication flow to support access and refresh tokens
Took 2 hours 10 minutes

--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -33,3 +33,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Stripe
 stripe.secret.key=${STRIPE_SECRET_KEY}
 stripe.publishable.key=${STRIPE_PUBLISHABLE_KEY}
+jwt.secret=${JWT_SECRET}
+jwt.expiration=86400000
+jwt.refresh.expiration=2592000000
