--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,4 @@ stripe.publishable.key=pk_test_51QpDwOP3h95OhlJTedWJx0SVWqukKhWCTRIRx16ZRoIWHd9p
 # JWT Configuration
 jwt.secret=orderFlowSecretKey12345678901234567890123456789012
 jwt.expiration=86400000
+jwt.refresh.expiration=2592000000
